--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -102,8 +102,8 @@ bind -r L resize-pane -R 2
 # window navigation
 unbind n
 unbind p
-bind -r C-h previous-window                             # select previous window
-bind -r C-l next-window                                 # select next window
+bind -r b previous-window                               # select previous window
+bind -r n next-window                                   # select next window
 bind -r C-S-H swap-window -t -1 \; select-window -t -1  # swap current window with the previous one
 bind -r C-S-L swap-window -t +1 \; select-window -t +1  # swap current window with the next one
 bind Tab last-window                                    # move to last active window
@@ -142,7 +142,7 @@ if -b '[ -c /dev/clipboard ]' 'bind y run -b "\"\$TMUX_PROGRAM\" \${TMUX_SOCKET:
 
 # -- buffers -------------------------------------------------------------------
 
-bind b list-buffers     # list paste buffers
+bind C-b list-buffers     # list paste buffers
 bind p paste-buffer -p  # paste from the top paste buffer
 bind P choose-buffer    # choose which buffer to paste from
 
