--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,14 +1,23 @@
+[language-server.emmet-ls]
+args = ["--stdio"]
+command="emmet-ls"
+
 [[language]]
 name = "typescript"
-language-servers = ["typescript-language-server"]
+language-servers = ["typescript-language-server", "emmet-ls"]
 formatter = { command = "prettier", args = ["--stdin-filepath", "file.ts"] }
 
 [[language]]
 name = "tsx"
-language-servers = ["typescript-language-server"]
+language-servers = ["typescript-language-server", "emmet-ls"]
 formatter = { command = "prettier", args = ["--stdin-filepath", "file.tsx"] }
 
 [[language]]
 name = "jsx"
-language-servers = ["typescript-language-server"]
+language-servers = ["typescript-language-server", "emmet-ls"]
 formatter = { command = "prettier", args = ["--stdin-filepath", "file.jsx"] }
+
+[[language]]
+name = "scss"
+language-servers = ["vscode-css-language-server"]
+formatter = { command = "prettier", args = ["--stdin-filepath", "file.scss"] }
