--- a/helix/config.toml
+++ b/helix/config.toml
@@ -24,4 +24,4 @@ wrap-indicator = ""
 
 # ~/.config/helix/config.toml
 [keys.normal]
-C-y = ":sh zellij run -n Yazi -c -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.sh open"
+C-y = ":sh zellij run -n Yazi -c -f -x 10% -y 10% --width 80% --height 80% -- bash ~/.config/helix/yazi-picker.zsh $pwd"
