--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,11 @@
 unbind r
-bind r source ~/.config/tmux.conf
+bind r source ~/.tmux.conf
 
 set -g prefix §
 
 set -g mouse on
 set -g base-index 1
+set -g renumber-windows on
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -13,29 +14,37 @@ bind-key l select-pane -R
 
 set-option -g status-position top
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-cpu/cpu'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'dracula/tmux'
 
-# Catppuccin
 
 set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
 # Load catppuccin
-run ~/.tmux/plugins/tmux/catppuccin.tmux
+#run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 # Make the status line pretty and add some modules
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
+
+# windows
+#set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##T "
+#set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##T "
+
+#set -g @catppuccin_window_text "#W"
+#set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_text "#{b:pane_current_path}"
+set -g @catppuccin_window_current_text "#{b:pane_current_path}"
 
 run '~/.tmux/plugins/tpm/tpm'
