--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,24 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Intuitive split keybindings
+bind-key - split-window -h
+bind-key _ split-window -v
+
+# Pane resizing
+bind-key H resize-pane -L 5
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key L resize-pane -R 5
+
+# Create even splits
+bind-key = select-layout even-horizontal
+bind-key + select-layout even-vertical
+
+# Window navigation
+bind-key n next-window
+bind-key b previous-window
+
 set-option -g status-position top
 
 set -g @plugin 'catppuccin/tmux#v2.1.3'
@@ -22,6 +40,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+set -g terminal-overrides '*:smcup@:rmcup@'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
