--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,10 +2,15 @@ unbind r
 bind r source ~/.tmux.conf
 
 set -g prefix §
+set -g prefix2 C-b
 
 set -g mouse on
 set -g base-index 1
 set -g renumber-windows on
+
+# Disable mouse wheel window switching
+unbind-key -n WheelUpStatus
+unbind-key -n WheelDownStatus
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -30,6 +35,12 @@ bind-key + select-layout even-vertical
 bind-key n next-window
 bind-key b previous-window
 
+# F-key shortcuts
+bind-key -n F9 detach-client
+bind-key -n F10 next-window
+bind-key -n F11 new-window
+bind-key -n F12 kill-window
+
 set-option -g status-position top
 
 set -g @plugin 'catppuccin/tmux#v2.1.3'
@@ -53,9 +64,7 @@ set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -g status-right ""
 
 # windows
 #set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##T "
